@@ -5,6 +5,24 @@
 management:
   mode: "fleet"
 
+  # Check in frequency configure the time between calls to fleet to retrieve the new configuration.
+  #
+  # Default is 30s
+  #checkin_frequency: 30s
+
+  # Add variance between API calls to better distribute the calls.
+  #jitter: 5s
+
+  # The Elastic Agent does Exponential backoff when an error happen.
+  #
+  #backoff:
+  #
+  # Initial time to wait before retrying the call.
+  # init: 1s
+  #
+  # Maximum time to wait before retrying the call.
+  # max: 10s
+
 download:
   # source of the artifacts, requires elastic like structure and naming of the binaries
   # e.g /windows-x86.zip
