@@ -15,7 +15,7 @@ var DefaultAgentFleetConfig []byte
 func init() {
 	// Packed File
 	// _meta/elastic-agent.fleet.yml
-	unpacked := packer.MustUnpack("eJyMlk2Xo7oRhvf5GbPPDR/NnCE7CzdCjKFjfFtfmxwkeQS2ZHNigw05+e85wm53z6Rzz130xkh6q956qqr//eWfdnuu/7Y19encyr/Wens4//bDbLfn30Zrvvz9C5q8+B+//7k/9KyMsHhk5KL/7J3H3/q4Q8+5YbSaEDQTguUgLO94iEdO1lqRaM8p0pW9Gk7XJ5SZQW3AjpEnzSG2NYkMgv4gw7WWAfYUND0Pi+9oBFba+Iyy6sg3YFWTvBH2WePXfY/S9zcUBXtGK+PO1bTQ3JoT3wBPjGAngsjWRPnSvmoFG4Oy0qis6oRVkzvP6NrpNO67sLGHstKXGRjkoTI8Ae12A6CA2Kjk6bsgac+IMoLgXi2P31ECziKozEu7aPkttzbR3V6Eqhcwbvh8ZrFDWTkomu/4Bgy8BV4NXzWjuVcT3rCwmlYJGDlN/ZrmRo7ACJhOCpodgteuDl61DKtRkdJTNDcIpj1PQM+I3wkrtQjYLS+Yd8KmY03wlLQLjUZgVlbqVag6YatBhcV5u9TB6tB1cnHUj5gw3mx+P2pkG09lYHppvw0/xWbxidHSq0nRs+DbwGEcCnsdGKmmVXCr+WpE9zxBo6DWCn67x1R10uKdgvG43cy18BgxfU2iA4LVoILoJIJ07xiRMN3VQXrgtHC+eozmB06rHxyakZPSE2EeOZ/z7HxhtDqubNUomMar4P0d+Yij6gTBg6JrzW08ftSatTPQsODc8OB11qqJb0SIvZd2MRVZcXsD8k7AVxeXVyczSw3KgM/stWMj+Bene61o6RixIkRaWTzWhEef5fbRz3ttOt6CXoTrN1Y7OYKLtHjiJPLQ88NzvXa8HdZaBeYkEuDJw372d+YrARdF8pM7Vwc4QpCPIvA0J9dGhlXHxmgnRhBykk81rcxKu7qDg7zl9hUlaL8N55r1HKYeo97w4e6Fh4v2LV5xKD1Grid6O+/6dmJh3jGLp3t/nkRQNgqaQbQz5487v9R3kFk+8DBvBC169Gy828xITzL4dvPU8ZkUt9pluWGkmll/3NuASUK8qwnvWJB6NYl7OT65Wv4a56c51iSaFExPIkHfkwMYRVAaGRZf77meaxJ1gqQnNM+BtRYHfGYWjwjyQbZOOw2FxXuUvd0tjbwcNYJ+J0x8EWHuWLoWy8WluOciSPpUE98XGzB/RzDyBcmNbG/8SBdjEDmeLtLGO07L6d4LZ0abHxLGo1oedTEtLsVy8X84L0dOnB+Owcio8ae3epSpIydPs48swJMcZ+5mDmWId/NvAfcFvEZvb838zsw17uyjV+5eOR9HlYBBQjwyWnUieNJuBrMg7mVg9pzmLqcGQd7U5OrmsMvp5qGJ/6f3kkNuVJZHL/rOAIka5mZrAvacVkZaN/ccc+rIaXV0e0VaPPeF05UwnmRgWgFfe/RcGW5TX2RrfdsLjrHX3sX+eHd51CrLfb6+6c1vWWOkH+9EiHuVvLPGafGBhdg6NlWWd7O3v2gVM4+LHUpv+bidqFxvu3vLZy0IbsSh0DV99HbLN24PVG6G7xGMe7fDnD8IplbBWdP9ZhkxJ7cLbv38FkP5gwWxLw7rr2j5NsMqt0silJUXTsqOu7xGsHc9vt2ATrTgLEfQclqFnOD+D/OZwDy7OHSzae80LjPzd7Zp8KmWY7cTFJ8fsUDTI+hPCDotZWYe3zwfn3QFsWUUn1Ti2FxMxfKm+1HjpV344l6vijYXEURGHKrO/e/CIfY4zV0PO/2whtirZ+8e+m5evbPtuPj5jf7ONq1pdZzzfPesEXati/FRp2nmNrnocrc4oeXz+Ngfn7Pn2DfbDAzC4l5B04jl8fHty3/+8t8AAAD///ycVl0=")
+	unpacked := packer.MustUnpack("eJyMVl2To7gVfc/PmPdsMDSdJVX7YNyNEGOYGE9LSC8pJHkAW7Kp2IAhlf+eusJ298xOtvbBVd1Iup/n3HP/8+lfZncp/7bT5fnSyL+W1e54+eWb3u0uv4xGf/rHJzw5wT+//rkfflVaGDIyOlR/9s3jtznt8WuiWZFPGOkJo6wXhrfcIyOnm0pR/8ALXOXmqnmxOeNY92ob7hl9qjgipqS+xmjRS29TSZc4CumOe+lnPIZGmuCC4/zEt+G6pEktzGtF3g4djt5tqCI8sCLXcK8s0oobfebb0BFjuBeub0qqFtK8VQrVGseZVnHeCqMmuM+KDfip4VyYwMFxtpBx2MtjrvkqbHbbEAlEtFo9fRY06hhVWlDSqZfTZ7wKL8LN9Zdm2fA5t2ZVnSq8SquNW2vmnqsScjwmWhZEC5P539VmGzolgrj0hW/Dhhe5xynpMMpqga4QX48RP3NKHPt3nGgVJy0vuL7VpOOFrJgbdNzooyqSWiHdi+bpM14t96tmWeExfOWU14peHdubl3SQA8SY7UtE9qWru8LlIy+iBaf+fvf1VKVTOD3yoPkBx7yWRtfCZBojiEFpTp+qDQmT72OFs1zLJjyUReZIoxt16wu3vbqe5TjHVhrtKETGL81yIYeT/YYjey8SKJoU0nv8Gh059R2M8p4XaZUX9SBcX4tj3gJOmYn2pRsY3oReiaBuUYcRGaUJRozqWsah/q4WblIz99Jzw57t/8Oc45b6rUK6FqvQKelCz7VWdVlsKmaIEV6ib7X3S+ofP+azvtWpBBsvpyot0o+1z1hRt6IggOFWUOj1r5Vyo1atwoZT3gPupCGOPOpWGDlj1NZ06G42LqyonvHLK/TtM0eBJ8y1Z3TzfDufhEdG5r5VwmW399GokDaMZo4cB7B/VVSPUENOr7X08paN4bmkF+CDI49kr2KLx1qYTSVMdLF5osDccm1K6gMGtLzVjG/9I14FXkn9g/DUtC6qp6zxn8tiCby4xUTI2+HwjFfJScX5IKdTv3Y/xubre6/XJuvXbt4r1z8LNzrIMWg4jRw5/trc8hxYkZ/m3tiYDmWRaOblvTweLAcUilphdMfHEGLqBApqjsgBxyH0veYumcCWQtHIXeIUbt5KQ/YKBSPgHjf53yWKnHLlwzypv22Ddztxeo/DYkR4xMGI94D1d1/W98Bo9m+YE7MvfeE0WFhsAK9mG6akVw1xKVRZTLBtOCianEuaVqVLfByTCWYnByzHXEujzY7+JLePvR7uWGTzLEO8Feitgpko40RLl3Rq9RN+xaoVaKgA3zOPLb4qGZNGwD100bvtbRYjcmZF5pQ07ZgLWCaNdLXDt8CzcODenBvMxCS+2J6tTV4rFAVr9/2tRGrA79yZFIrOIgrmHqNcSzcbS5poOc4zUqBgz4q8Fe6TxfnjzQ/9XXvhKFw1MrqY1k2YqFXYyjGsRZz1t5rOs2bu3chpdJg5fX/nVNILNXO1KWk2z9Njarn4Y5w/z1F30suBv82qagdpgj0vsunLLVdBdVfSBcyaQXiJg5G/EJBnExrhYfBdK9cH7Xm85XamhMDJbxIFo8XS1+WQvixvuSzqHdIXBbHD+SrsFF00oLkzfrKBFarjtqdJz1wyyRsXBI2eCg/0bvMM2pC+LIf/g/O9NKRWM8at7ny0tb7PYFvHTEsvtbi7ayqz3zKj6PW8295tAX4t5qxuP7iynGsFdZTHTSW8UEsTOSUNusd+ccxajub9gm1Dw6g+qyKxnLvV8NvvuFe1Iy9y4PqtbqRjNDlbniHi8CKBGgPmIBenRGS8z33rF/YCL2uZuep184OuIg4Y01YP3u0+4zgfFX2b/T30O/vG3GAhjpsPWCPTByz0HLBZ5CN8/52vl/SuDVubzzbcC89yu+fN8orRQjPqwy724Da764zRgK1emMfeUfOj1Wz7jZuoFVYLLJ8fMRRu1ivqO1+a5X2GHUBLdttwkrBHUN5afbHz4WD3HlGkoJ+OcokWf5zPvJOgHPTABx9pnL5jOwp+6guwW9LFQmwfsbSiCS9y/LBLPWqedvg119xECxFvLDbTaXnz+8HH11OVUWf2/UqeJAo6mJEljc4QH+wswGHwr9xag96CBtz9w7x6x3Y0YfS9jfu+QFztlCub56NmjPoH/JI++iQnwO3yjF/YsF4tr+n+oR8/xR6c8e93pOfHWfXbb5/++5f/BQAA//9Uei4c")
 	raw, ok := unpacked["_meta/elastic-agent.fleet.yml"]
 	if !ok {
 		// ensure we have something loaded.
